--- a/Rest-API/cmd/config.yml
+++ b/Rest-API/cmd/config.yml
@@ -5,3 +5,11 @@ listen:
   type: port
   bind_ip: 127.0.0.1
   port: 8080
+mongodb:
+  host: localhost
+  port: 27017
+  database: user-service
+  auth_db: admin
+  username:
+  password:
+  collection: users
